# self-updating-program

./: .cirrus.yml  .gitignore  .pylintrc  README.md  requirements.txt  setup.cfg  setup.py
app/: app.py  config.py  main.py  version.py
scripts/ci/: common.py  install_latest_from_github.py  install_second_latest_and_update.py
