[metadata]
name = self_updating_app
description = A self-updating application written in Python
description-file = README.md
description-content-type = text/markdown
author = Ben Reeves
author-email = bgreeves@umich.edu

[files]
packages =
	app

[entry_points]
console_scripts =
	self-updating-app = app.main:main
